--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.0",
-    "liqpay/liqpay": "dev-master"
+    "liqpay/liqpay": "master@dev"
   },
   "autoload": {
     "files": [
