--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "perspective/integration",
-  "description": "Integration Module",
+  "name": "salesandorders/feedtool",
+  "description": "Feed Tool",
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "authors": [
     {
@@ -11,8 +11,8 @@
     }
   ],
   "require": {
-    "php": "^7.0",
-    "liqpay/liqpay": "dev-master"
+    "php": "^7.1",
+    "salesandorders/feedtool": "dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -21,7 +21,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Perspective\\IntegrationModule\\": ""
+      "SalesAndOrders\\FeedTool\\": ""
     }
   }
 }
