--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "salesandorders/feedtool",
   "description": "Feed Tool",
   "type": "magento2-module",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "license": "MIT",
   "authors": [
     {
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "salesandorders/feedtool": "dev-master"
+    "salesandorders/feedtool": "dev-staging"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
