--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "salesandorders/feedtool": "dev-staging"
+    "salesandorders/feedtool": "dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
