--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-  "name": "salesandorders/feedtool",
+  "name": "salesandorders/magento-app",
   "description": "Feed Tool",
   "type": "magento2-module",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "license": "MIT",
   "authors": [
     {
-      "name": "Victor Pankovych",
-      "email": "pankovych.v@gmail.com"
+      "name": "Sales And Orders",
+      "email": "devtools@salesandorders.com"
     }
   ],
   "require": {
-    "salesandorders/feedtool": "dev-master"
+    "salesandorders/magento-app": "dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
