--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "salesandorders/magento-app",
-  "description": "Feed Tool",
+  "description": "A magento extension for SalesAndOrders marketing platform",
   "type": "magento2-module",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "license": "MIT",
   "authors": [
     {
@@ -22,7 +22,7 @@
   },
   "repositories": [
     {
-      "type": "vcs",
+      "type": "git",
       "url": "https://github.com/SalesAndOrders/magento-app.git"
     }
   ]
